--- a/vikal4463/index.html
+++ b/vikal4463/index.html
@@ -114,7 +114,7 @@
 <body>
 <div class="overlay"></div>
 <div class="watermark">
-  کان لم یکن
+  باطل شده
   <h5>باطل و از درجه اعتبار ساقط است</h5>
 </div>
 
