--- a/index-barikalaaah.html
+++ b/index-barikalaaah.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <video controls>
+    <video controls autoplay>
         <source src="VID_20250906_161352_936.mp4" type="video/mp4">
         مرورگر شما از فرمت ویدئویی پشتیبانی نمی‌کند.
     </video>
